--- a/classwork/desktop.ini
+++ b/classwork/desktop.ini
@@ -1,3 +1,4 @@
 [LocalizedFileNames]
 CS15-InClass1.htm=@CS15-InClass1.htm,0
 CS15-InClass2.htm=@CS15-InClass2.htm,0
+CS16-InClass1.htm=@CS16-InClass1.htm,0
